[package]
name = "tiauth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }
axum = "0.4.3"
async-trait = "0.1.52"
thiserror = "1.0.30"
sea-query = { version = "0.20.0", features = [
    "sqlx-postgres"] }