[package]
name = "tiauth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }
axum = "0.4.3"
async-trait = "0.1.52"
thiserror = "1.0.30"
sea-query = { version = "0.20.0", features = [
    "sqlx-postgres"] }
redis = { version = "0.21.5", features = ["tokio-comp", "connection-manager"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["fs", "cors", "trace"] }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
sha2 = "0.9"
hex = "0.4.3"
opaquebind = "0.2.1"
once_cell = "1.9.0"
url = "2.2.2"
encoding = "0.2.33"
base64 = "0.13.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.6"